--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: blueviolet;
+}
+
+.wrapper {
+  min-height: calc(100vh - 56px - 40px);
+}
+
+.about-img {
+  width: 350px;
+  height: 350px;
 }
