--- a/src/components/ui/Navbar.css
+++ b/src/components/ui/Navbar.css
@@ -1,8 +1,21 @@
-.navbar-logo-icon {
-    margin-right: 0.5rem;
-    font-size: 1.6rem;
-    color: blue;
-}
 .navbar-logo-text {
-    font-size: 1.2rem;
+  font-size: 1.5rem;
+  color: blueviolet;
+  padding-left: 10px;
+}
+
+.navbar-nav {
+  margin-left: auto;
+}
+
+.nav-link {
+  color: white;
+  margin-left: 20px;
+  font-weight: 500;
+  transition: color 0.3s ease-in-out;
+}
+
+.nav-link:hover {
+  color: #28a745;
+  text-decoration: underline;
 }
